--- a/Versão Nova/js/package.json
+++ b/Versão Nova/js/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "firebase": "^5.5.7",
+    "firebase-tools": "^6.0.1",
     "http-server": "^0.11.1"
   }
 }
